@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 24082022154854
+# Build: 25082022131123
 ######################################################
 
 # определим текущую версию, релиз и т.д.
